* FIX: MoneySupply (CBlockIndex)
* FIX: Compiling on Ubuntu 16
* Menu Items update: File -> Main, Settings -> Wallet, Added: Tools, Mining & Social Links
* Fixes from Talium coin (https://github.com/taliumtech/talium/commit/f673d50f41b4f5ee6f9e670d859a9de634620071)
* Installed: Developer Fee, 10% of block reward (Hard Fork 1)
* TurboSync 1.0.0 (2x network sync speedup, unlimited scaling)


v1.0.0.7 (To Finish before release)
--------
* Dynamic Checkpoints
* Installed: RPC Getpeeraverageheight, Getpeerbestheight, Getpeerbestblockhash
* Installed: nSyncHeight && nSyncBlockhash values output to GetPeerInfo RPC
* Masternode reward decentralization (Hard-Fork 1)
* Chain Shield (default check every 50 blocks)
* DDoS Shield & Firewall upgrades
* Multisig - GUI Update
* dumpwallet > ExportWalletPrivateKeys -> GUI
* dumpkeys > ExportAddressPrivateKey -> GUI
* New GUIs: ExportWalletKeys, ExportAddressKey, ChangeGenProcLimit

v1.0.0.6
--------
* Updated Checkpoints
* Updated Fixed Seednodes with active masternodes list
* Bitcoin Firewall 1.2.2.4
* Masternode manager GUI - Cleanup
* Stake Halving Bug Fixed
* Testnet Established
* Dark Theme Installed
* Darksend Amounts lowered
* About -> Information -> Open PHC.conf button
* About -> Information -> Open Masternode.conf button
* Masternodes -> My Masternodes -> Open Masternode.conf button

v1.0.0.5
--------
* Updated Checkpoints
* Improved Bitcoin Firewall 1.2.2.3
* Fixed GUI Masternode manager (Downloading List...)
* Fixed Large bandwidth usage from certain peers
* Fixed issue with Dynamic Block Reward 3.0

v1.0.0.4
--------
* Updated Checkpoints
* Reformatted Bitcoin Firewall 1.2.2.2 source code
* RPC & phc.conf support added to Bitcoin Firewall
* Fixed masternode status bug when started remotely
* Fixed GUI Start masternode without updating

v1.0.0.3
--------
* Updated Seednodes from current Masternodes
* Updated Checkpoints
* Fixed Core 8 Cnode::nSyncHeight
* Added Firewall logging to debug.log

v1.0.0.2
--------