@@ -123,6 +123,10 @@ extern uint256 ParseHashO(const json_spirit::Object& o, std::string strKey);
 extern std::vector<unsigned char> ParseHexV(const json_spirit::Value& v, std::string strName);
 extern std::vector<unsigned char> ParseHexO(const json_spirit::Object& o, std::string strKey);
 
+extern json_spirit::Value forcesync(const json_spirit::Array& params, bool fHelp);
+
+extern json_spirit::Value getpeeraverageheight(const json_spirit::Array& params, bool fHelp);
+
 extern json_spirit::Value getconnectioncount(const json_spirit::Array& params, bool fHelp); // in rpcnet.cpp
 
 extern json_spirit::Value getpeerinfo(const json_spirit::Array& params, bool fHelp);
